# desant_claw

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: ea548519a279_emails_table_add.py
src/: settings.py  utils.py
src/embedding_models/: bge_m3.py
src/mail_agent/graph/local_action_subgraph/: __init__.py  graph_builder.py  models.py  routing.py
src/mail_agent/graph/local_action_subgraph/nodes/: __init__.py  execute_bash_action.py  execute_browser_action.py  execute_terminal_action.py  perform_local_action.py  select_action_execution_capability.py
src/mail_agent/graph/persistence/: async_checkpointer.py
src/mail_agent/graph/reply_subgraph/: __init__.py  graph_builder.py  models.py
src/mail_agent/graph/reply_subgraph/nodes/: send_email.py
src/mail_agent/graph/top_level/: graph_builder.py  models.py
src/mail_agent/graph/top_level/nodes/: __init__.py  ingest_email.py  (+4 more)
src/mail_agent/graph/top_level_graph/: graph_builder.py  models.py  routing.py
src/mail_agent/runtime/: enums.py  event_factory.py  graph_runtime.py  models.py
src/mail_agent/services/: action_execution_capability_selector.py  browser_action_executor.py  contracts.py  email_service.py  execution_plan_builder.py  fetch_email_service.py  models.py  send_email_service.py
src/mail_agent/services/local_action_executors/: __init__.py  bash_action_executor.py  browser_action_executor.py  contracts.py
src/mail_agent/shared/: constants.py  enums.py  models.py  prompts.py  settings.py
src/mail_agent/states/: local_actions_substate.py  reply_substate.py  top_level_state.py
src/scripts/: clean_emails_in_pg.py  import_emails_to_db.py  ingest_emails_from_pg_to_qdrant.py
src/services/vector/email/: chunker.py  models.py  service.py
src/storage/postgres/: session.py
src/storage/postgres/models/: email.py
src/storage/postgres/repositories/: email_repository.py
src/storage/qdrant/: bootstrap.py  client.py
src/storage/qdrant/repositories/: email_repository.py
(+5 files in other folders)
