[project]
name = "mail-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "google-auth-oauthlib>=1.3.0",
    "langchain-google-community>=3.0.5",
    "langgraph>=1.1.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.72.0",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "ruff>=0.15.7",
]
