[project]
name = "mail-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-auth-oauthlib>=1.3.0",
    "langchain>=1.2.13",
    "langchain-experimental>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.72.0",
    "pydantic-settings>=2.13.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "ruff>=0.15.7",
]
