[project]
name = "mail-agent"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "flagembedding>=1.3.5",
    "google-auth-oauthlib>=1.3.0",
    "langchain>=1.2.13",
    "langchain-experimental>=0.4.1",
    "langchain-google-community>=3.0.5",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "langgraph-checkpoint-postgres>=3.0.5",
    "lxml>=6.0.2",
    "playwright>=1.58.0",
    "psycopg-pool>=3.3.0",
    "psycopg[binary]>=3.3.3",
    "pydantic>=2.12.5",
    "pydantic-ai-slim>=1.77.0",
    "pydantic-settings>=2.13.1",
    "qdrant-client>=1.17.1",
    "sqlalchemy>=2.0.48",
    "structlog>=25.5.0",
    "transformers<5",
]

[dependency-groups]
dev = [
    "ipython>=8.39.0",
    "ruff>=0.15.7",
]
